Fix Torob non values small tags Fix high z-index of price elements

--- a/assets/style/tooltip.css
+++ b/assets/style/tooltip.css
@@ -7,7 +7,7 @@
 
 [data-iptt] {
     position: relative;
-    z-index: 99999;
+    z-index: 999;
     cursor: pointer;
 }
 
@@ -36,7 +36,7 @@
     content: attr(data-iptt);
     text-align: center;
     font-size: 14px;
-    z-index: 999999;
+    z-index: 999;
     line-height: 1.2;
 }
 
@@ -51,7 +51,7 @@
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
     content: " ";
-    z-index: 999999;
+    z-index: 999;
     font-size: 0;
     line-height: 0;
 }
